Add Paperless standard metadata extraction
